# wikipedia-institutional-fetishism

./: .gitignore  .sesskey  CLAUDE.md  Dockerfile  Procfile  README.md  app.json  app.py  ghost-hunt-spec.md  pyproject.toml  requirements.txt  wikipedia-fetish-vault-staging.md  wikipedia-institutional-fetishism_1.md
analysis/: collision.py  corpus_index.py  dispersal_map.py  ghost_hunt.py  pipeline.sh
data/: wwi_extended.jsonl
output/: ghost_mentions.jsonl  ghost_summary.json
